--- a/coc-settings.json
+++ b/coc-settings.json
@@ -4,7 +4,11 @@
     "diagnostic.infoSign": "¡",
     "diagnostic.checkCurrentLine": true,
     "diagnostic.messageTarget": "echo",
+    "diagnostic.virtualText": false,
     "coc.preferences.hoverTarget": "float",
     "python.pythonPath": "/usr/bin/python3",
-    "clangd.path": "/home/fredrik/.config/coc/extensions/coc-clangd-data/install/12.0.1/clangd_12.0.1/bin/clangd"
+    "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/14.0.3/clangd_14.0.3/bin/clangd",
+    "suggest.noselect": true,
+    "inlayHint.enable": false,
+    "clangd.inlayHints.enable": false
 }
